@@ -16,6 +16,7 @@ New Java rule:
 
 Fixed bug 1064: Exception running PrematureDeclaration
 Fixed bug 1068: CPD fails on broken symbolic links
+Fixed bug 1074: rule priority doesn't work on group definitions
 
 
 
